src/snapshots/lustre_collector__recovery_status_parser__tests__multiple.snap
---
source: src/recovery_status_parser.rs
expression: records

---
[
    Target(
        RecoveryStatus(
            TargetStat {
                kind: Ost,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-OST0000",
                ),
                value: Complete,
            },
        ),
    ),
    Target(
        RecoveryStatus(
            TargetStat {
                kind: Ost,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-OST0001",
                ),
                value: Complete,
            },
        ),
    ),
    Target(
        RecoveryStatus(
            TargetStat {
                kind: Mdt,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-MDT0000",
                ),
                value: Complete,
            },
        ),
    ),
]
